<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cultural Heritage Game</string>

    <string name="btn_info">Informazioni</string>
    <string name="btn_play">Nuova Partita</string>
    <string name="btn_playMenu">Gioca</string>
    <string name="splash_text_logo">Calabria Games</string>
    <string name="btn_login">Login</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_profile">Profilo</string>
    <string name="btn_leaderboard">Classifica</string>
    <string name="btn_settings">Impostazioni</string>
    <string name="btn_continue">Continua</string>
    <string name="actionBarCustomTitle">Placeholder, modifica attraverso java il titolo</string>

    <string name="splash_image_description">Logo centrale avvio applicazione, è il \'Pantheon\'</string>
    <string name="btn_settings_description">Bottone impostazioni</string>
    <string name="btn_profile_description">Bottone profilo</string>
    <string name="iconBackDescription">Pulsante navigazione indietro</string>
    <string name="login_successful">Login effettuato con successo!</string>
    <string name="login_failed">Login non effettuato. Credenziali non corrette.</string>
    <string name="label_wrong_email_format_provided">Il valore inserito non è una e-mail.</string>
    <string name="label_welcome_back">Bentornato</string>
    <string name="loginText">Accedi</string>
    <string name="registerText">Registrati</string>
    <string name="registerTextView">Non hai un account?\nTocca qui per registrarti</string>
    <string name="loginEmailEditText">E-mail</string>
    <string name="loginPasswordEditText">Password</string>
    <string name="loginButton">Accedi</string>
    <string name="registerUsernameEditText">Username</string>
    <string name="registerEmailEditText">E-mail</string>
    <string name="registerPasswordEditText">Password</string>
    <string name="registerRegisterButton">Registrati</string>
    <string name="loginTextView">Hai già un account?\nTocca qui per accedere</string>
    <string name="label_field_required_error">Questo campo è obbligatorio.</string>
    <string name="label_welcome_message">Benvenuto</string>
    <string name="label_email_already_used_error">Questa mail è già in uso.</string>
    <string name="label_username_already_used_error">Questo username è già in uso.</string>
    <string name="label_provide_internet_error">Qualcosa è andato storto. Verificare la connesione internet e riprovare</string>
    <string name="label_google_account_already_registered_error">Account già registrato. Accedi o registra un nuovo account</string>
    <string name="user_session_shared_preferences">UserSession</string>
    <string name="logout_text_button">Esci</string>
    <string name="account_text_button">Profilo</string>
    <string name="graphics_text_button">Grafica</string>
    <string name="info_text_button">Informazioni</string>
    <string name="audio_text_button">Audio</string>
    <string name="login_required_text">Accedi per accedere a questa funzionalità.</string>
    <string name="share_leaderboard_text">Questo è il mio record in Cultural Heritage Game: {0}! Mi trovo alla {1}° posizione globale!\nRiesci a battermi?</string>
    <string name="share_leaderboard_title_text">Condividi la classifica</string>
    <string name="leaderboard_windows_title">Classifica</string>
    <string name="settings_windows_title">Impostazioni</string>
</resources>
