<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/splash_imageview"
            android:layout_width="@dimen/splash_size"
            android:layout_height="@dimen/splash_size"
            android:contentDescription="@string/splash_image_description"
            android:src="@mipmap/ic_launcher_foreground"
            app:layout_constraintBottom_toBottomOf="@+id/gameMenuBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/leaderboardButton"
            style="@style/ButtonStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:drawableStart="@drawable/icons_leaderboard"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toTopOf="@+id/settingsButton"
            app:layout_constraintStart_toEndOf="@+id/profileButton"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/ButtonStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/icons_settings"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileButton"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/profileButton"
            style="@style/ButtonStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawableStart="@drawable/icons_profile"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toTopOf="@+id/mainMenuBtn"
            app:layout_constraintStart_toStartOf="@+id/mainMenuBtn"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/mainMenuBtn"
            style="@style/ButtonMenuStyle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/icons_menu_small"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/playButton"
            style="@style/ButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:layout_marginEnd="50dp"
            android:text="@string/btn_play"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/continueButton"
            style="@style/ButtonStyle"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_continue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/playButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/playButton"
            app:layout_constraintTop_toBottomOf="@+id/playButton" />

        <Button
            android:id="@+id/gameMenuBtn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:width="240dp"
            android:height="70dp"
            android:text="@string/btn_playMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>